welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:1: error: Missing closing brace `}' assumed here
nbPas=0
^Program:7: error: illegal start of simple pattern
for (case <- 1 to nbPas) {
     ^Program:12: error: '<-' expected but '}' found.
}
^